<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <View
            android:id="@+id/cut_line"
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_dark"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_name"
                android:layout_column="0"
                android:layout_row="0"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_column="1"
                android:layout_row="0" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sensor"
                android:text="1035"
                android:layout_column="2"
                android:layout_row="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_channel"
                android:layout_column="0"
                android:layout_row="1" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_column="1"
                android:layout_row="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_channel"
                android:text="780.0"
                android:layout_column="2"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_pan"
                android:layout_column="0"
                android:layout_row="2" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_column="1"
                android:layout_row="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_pan"
                android:text="1000"
                android:layout_column="2"
                android:layout_row="2" />
        </GridLayout>
        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_confirm"/>
    </LinearLayout>
</LinearLayout>
