<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.wls780m.MainActivity">


    <com.linheimx.app.library.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="250dp" />
    <!--
    <GridLayout
        android:layout_below="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:columnCount="3"
        android:rowCount="5">
        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/et_sensor"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="1035"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_gravity="fill"/>
        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/et_channel"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="780.5"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:layout_gravity="fill"/>
        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/et_pan"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="780"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="写参数"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="设置射频"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/button6"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="改传感器"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/button3"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="读参数"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/button5"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="临时波形"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/button9"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="读射频参数"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/button7"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="未知传感器"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/button4"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="读数据"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/button8"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="丢包率测试"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/button11"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="临时温度"
            android:layout_gravity="fill"/>

    </GridLayout>
    -->
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_below="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_sensor"
            android:layout_weight="1"
            android:text="1035"
            android:textAlignment="center"
            android:inputType="number"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_channel"
            android:layout_weight="1"
            android:text="780.5"
            android:textAlignment="center"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_pan"
            android:layout_weight="1"
            android:text="780"
            android:textAlignment="center"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_below="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_setRF"
            android:textColor="@color/colorYellow" />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_change"
            android:textColor="@color/colorYellow"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_tempW"
            android:textSize="12sp"
            android:textColor="@color/colorYellow"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_readD"
            android:textSize="12sp"
            android:textColor="@color/colorYellow"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_tempT"
            android:textSize="12sp"
            android:textColor="@color/colorYellow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_below="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_unknowS"
            android:textColor="@color/colorYellow"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_lost"
            android:textColor="@color/colorYellow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout6"
        android:layout_below="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:enabled="false"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:enabled="false"/>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="" />
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="" />
    </LinearLayout>

</RelativeLayout>
